--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -110,6 +110,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="TriTriples.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="TriTriples.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
