--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -113,7 +113,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="fuckthisshit.h" />
+    <ClInclude Include="yay.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
